# Guide

./: .gitignore  README.md  elm.json
front/: Dockerfile  elm.json
front/src/: Evaluation.elm  Main.elm  Routing.elm
front/src/Ui/: style.css
server/: Dockerfile  guide.cabal
server/src/: Main.hs
src/: Main.elm
src/Ui/: style.css
