name:                guide
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fga-funcional/Guide
license:             BSD3
license-file:        LICENSE
author:              Júlio Xavier, Guilherme Marques
maintainer:          example@example.com
copyright:           2018 Júlio Xavier, Guilherme Marques
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable guide
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       scotty, 
                       aeson,
                       text,
                       unordered-containers,
                       persistent,
                       persistent-template,
                       persistent-postgresql,
                       transformers,
                       monad-logger,
                       wai-extra,
                       wai-cors

